--- a/source/_posts/使用说明.md
+++ b/source/_posts/使用说明.md
@@ -3,7 +3,8 @@ layout: hexo
 title: hexo写文章使用说明
 date: 2022-02-09 14:08:49
 tags: [写作,hexo]
-categories: hexo
+categories:
+- [Hexo, 写作]
 ---
 如何使用hexo作文章
 
